syntax = "proto3";

option java_package = "cc.before30.k8s.sample.grpc.proto";

// The greeter service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc MultiSayHello (HelloRequest) returns (stream HelloReply) {}
    rpc StreamSayHello (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
